# samolet-apart-prediction

./: .env.example  .gitignore  Final_Report.md  README.md  main.py  notebook.ipynb  pyproject.toml  requirements.txt  train_models.py
.github/workflows/: sync.yml
data/: test_data_5%_preprocessed.csv  test_data_5%_raw.csv
firecrawl_outputs/: 308985_38c661316326.json  extract_result.txt
model_artifacts/: categorical_values.joblib  encodings.joblib  feature_names.joblib  scalers.joblib  scaling_stats.joblib
models/: categorical_values.joblib  feature_encoders.joblib  feature_names.joblib  rf_tuned_model.joblib  scalers.joblib  scaling_stats.joblib
output/: browser_output_21xf_308985_20260216_185226.txt  browser_output_x242_308985_20260216_181955.txt  firecrawl_output_example.txt
scripts/: WEB_SCRAPING_README.md  browser_scraper.py  crawl4ai_check.py  firecrawl_scraper.py  web_scraper.py
src/: README.md  __init__.py
src/config/: __init__.py  logging_config.py  settings.py
src/core/: __init__.py  feature_selection.py  preprocessing.py  regression_evals_and_tuning.py  visualization.py
src/scripts/: WEB_SCRAPING_README.md  __init__.py  crawl4ai_check.py  crawl4ai_scraper.py  firecrawl_predict.py  firecrawl_scraper.py
src/scripts/basic_check/: browser_check.py  web_check.py
utils/: __init__.py  preprocessing.py  regression_evals_and_tuning.py  statistics.py
